--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "portfolio",
+  "name": "portfolio-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://vaibhavisno-one.github.io/portfolio-react",
   "dependencies": {
     "@react-pdf/renderer": "^2.2.0",
     "@testing-library/jest-dom": "^5.16.2",
@@ -24,6 +25,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
